# gfx_shadercompiler

./: CMakeLists.txt  README.md
include/gfx_shadercompiler/: compiler.h
precompiled/: ShaderConductor.lib  libShaderConductor.dylib
src/: compiler.cpp
src/ShaderConductor/: ShaderConductor.cpp  ShaderConductor.hpp
src/dxc/: dxcapi.h
src/dxc/Support/: Global.cpp  Global.h  Unicode.cpp  Unicode.h  WinAdapter.h  WinAdaptor.cpp  WinFunctions.cpp  WinFunctions.h  WinIncludes.h  exception.h
